--- a/ansible/inventory/kube/host_vars/k3s-01.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-01.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:73OHu8qE,iv:kFhoHBM8TA9EcejyaPQ2p5NXB5HRmgtZ4J/3PE0ENFM=,tag:cmR1NO1Ro2etH4ST4Nkmiw==,type:str]
-ansible_user: ENC[AES256_GCM,data:6pNW/1ZQ,iv:LCXaeqxB/8QI5PC8S1T0z3K/PqRWRs53A/J7lM1VjAY=,tag:N64zfVR6mWfqRXAGBgRYuw==,type:str]
+kind: ENC[AES256_GCM,data:5vJtHBW0,iv:xqm/siCwBtbvwrcktuw0ssslN1owR0H2XLacm76Q/jI=,tag:fQ+VjRwcoNbBxNpXVBU9DA==,type:str]
+ansible_user: ENC[AES256_GCM,data:a5MUw6Cx,iv:QbTXLccKGNRKpjZLaDiQY+FeI5bQ52ewPjTnQe6vnOs=,tag:9DKwHegFQMlMaclU4rcikw==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBtTWxRZDRKOXJwRForS1p1
-            MjZGanFPMkJzSDlqNEx5RkkvWksxTkYwNW5FClJ1a0FWQTluM0pyOWVJVkVuanR2
-            aWVzWm1yakNLTjJNQkExN0dJVzdGVDQKLS0tIDZ1ZjN6cVA2Z2plRzNMMDRuUUZi
-            MjM4c2VQc1Q1RHR6ZHpNZVZiRnF2dm8Kcse4LRrDVyTEX/rCq7AdfAeJ4abomM1U
-            ePOB5K9tDjoMN9V0U07F7WP6mXXN+nhC1B+LZXWSplvNTbgD2jG2MA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBzZFZ4dkpsdFFzR29pNThW
+            WHRzLzJuVW81Skp2K296SWxUM2NLeW5PWVdFCmRKWXNuZUdUTy8vSnBqNFlPczhQ
+            SEVwUFh2VUh0WitnMVRXb0FicXZpWVkKLS0tIFYzeGwxeWZPOTJMTlJKdlpOVVR3
+            Tm5TNVorTS9JNTl1eUx1SkNsTk8ybFkK/fzLIhc2uAu7u/fj9Q83nRs8fwS4rb/B
+            RSC7YS0s06B99+iLZOP5jvBlorE2FUyL1QyKec3Jc/11XZcDeIrA8Q==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-20T00:06:14Z"
-    mac: ENC[AES256_GCM,data:xtj1fEKldQD0mRmaGEzK5WqoOYvtnQxlo8h1G8ULHkBlKi9JZJq1lmwgrygdVMdfnZMW2n4Kz+kP/JrnwZQb5WwZ4BejeCDWdNy9GIEECPOJo/lcwylrBPQ3DPEf80U90YCBaWQaEBXB5+TSJMxqEelQIWXKqJH7eno+SulMouw=,iv:bqD1zjhadwceA9dINVDMMcqhTvCv8nHNBHvOG2oBSUw=,tag:4c191RcmNsew035ngSDthQ==,type:str]
+    lastmodified: "2023-02-20T18:58:54Z"
+    mac: ENC[AES256_GCM,data:Ji/SRPKqBH0wWIRzDbYoz6FvTAF9uoQh/RSQ0Iz88I3c0OTttgCPNbqWodSeNJloGcV4yN8m23xshFVQ/SQsUqTkva1FIVXLshjD41z8CXpsHimzrHyTdZU+Zs9huz9oB0Tc129jlLa5OKSbHEXDf+1+fprs50U8zZEgqN/+lV8=,iv:LP87klQOH39suqReTSKrY4oL69NX/pijWnY8PhnKCdY=,tag:NySvG2Qip9O/3RRzkXk65g==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
