--- a/ansible/inventory/kube/host_vars/k3s-02.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-02.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:7TtjyApp,iv:250JbCzMh7nbsvjvfm0Vrvpx5tMYUxZ7fIRINTRDjn8=,tag:vXzlyIASfUWTiTcA+WbKwA==,type:str]
-ansible_user: ENC[AES256_GCM,data:Op9v4fxu,iv:Rn51xjFyDigeMZiU8gS1No05fJTUON0fTaxVFl2k2Mk=,tag:xmGfk5lNHu3KmpyXyh+yWg==,type:str]
+kind: ENC[AES256_GCM,data:141infIO,iv:BF9lSUcKyV5DE1BJeweLRFL/vlqwx8mvYb7SV/3Nrwo=,tag:PiramFsh6MlW7cohKJv9YQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:A1LkZQ07,iv:9zkslgq72QyrdVMQw+WNxa0m6jcy1q8+sF2VawzM+RA=,tag:O5rcYoIh0MQhTzI4lbXagg==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBUaWZXWFUwNENMK2hNMTFE
-            UGIydDhvdytQeVhQRHJ3N3Qva2FWT2YwbTBVCnFmVnhIUVcyQWFFd2ZoNUdPRnFT
-            RHgrTWoreXlUZ3FZbGcvRHNySHloU1EKLS0tIEJwcDJnYS8yUU82VzByNUFHRHNq
-            cXNSQUJhTzBCKzRVMGJzWmNyMUk1ZHcKJwSX28gWN+sYS2U1h5TF4+/HgOtDCYb/
-            xB+n8nwDgXkcM2tHIFh8SnJLy6VtHM4upb7HIBvbeg92P+95CiHDOA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBudW5FcTBVZ2FkWXhjWEg3
+            cXU3SDJVaTRXaGdDb2M4RkZoWmNGY3NocmpVCkk3ci9WMWpQYXdxSGZHdUNaSlpD
+            TmRuMjZWN0xDNEM1UUJqVjhCR0l5RFkKLS0tIDBsbVBlK1I0Q29Td1d4UGNKcHpo
+            ZXRWRlRLOE9UcXEzT3JNUjdsZFRBVEkKO4kpHpSk8mKiViHlYAHtVt/2fqBxkXKY
+            xRAlHV0kMzH5q2ejCs8PT3Z9OB8d9kuWihwngYUVXQ3y19MppZ5UFA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-20T00:06:14Z"
-    mac: ENC[AES256_GCM,data:AMLBb4fCQqWS6TtUV+l9o0deco0LUJ6XOyCFaYp3kdcdts2vFuoI8A3FlnOQXgwhD2Ac29yZb4/OEwukkzfVsbVaIt3uHLrbF3JOQfTckEsJxIzziiWPrmvKlyDJUhMTSq9x8L7TCZ/ZIZ00dwIhrRlq1gaWyN2+dJAWaHNI2FM=,iv:aijVJrxzROCIhvAfjI9agsbkVHCc+sUywBsfjMk5Lsw=,tag:qCpyPPZFyJZX5xbjLoJ43g==,type:str]
+    lastmodified: "2023-02-20T18:58:54Z"
+    mac: ENC[AES256_GCM,data:8FcJOeuI84gjQi5QN+QzZI0CLYuQmt1KN8cTpY1Y2FQ2MSboLbQqZ1CES0LnXA8tkhgvmGrFwqUq8MQQPbRxAP3Zl1fjXV1QsNSSlbx/QZR8gqJp/3cGpkvOAsEIDYBqVyS9KEvRiXEqOBsvfIwbEuGHYuUZcOcXfNtmaLhNADs=,iv:Q/CTNSq3+iX0N9OD8KI/yPUyXmCLFVMny0X4NbpEhJA=,tag:TeMWxLVLAsgJAS3IzRIhzw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
