--- a/ansible/inventory/kube/host_vars/k3s-03.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-03.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:Sw2WZ9zt,iv:5aB5EETKwijgFcoSCizB4rr2nSFwVTuf6koi2EHDHTs=,tag:0gGXX11mkcQn417v+QyoUA==,type:str]
-ansible_user: ENC[AES256_GCM,data:zhvyIg8J,iv:pdzJ0TwQLeTOy7G0MxbbAecP+LpPCDANNvLikTKG9JQ=,tag:PDzh0a29RRj9jinrCCQKkA==,type:str]
+kind: ENC[AES256_GCM,data:0iNwNuFQ,iv:8Gd4p4GwyKJmN9XY7zSL3HJGvJwF4Kvp6y/i/qX2mJc=,tag:sqQPXhs7KuIB31vJhhGnfA==,type:str]
+ansible_user: ENC[AES256_GCM,data:63wsowxo,iv:O4Dd77i7HNHx0xwbsDnMoyBEHHLsQkZDrmXNDzuHtT8=,tag:ZmIDb9QJy2rGuE9Hpg5Mnw==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBLWWxmaVlyOWl1VUExTDFu
-            OFEzUkJWVFFPV0IvK2IvQ0pITVVRcy9QSGtvCkdqYzQwWFZXL0xpRFF4SmJhejZY
-            WlIwT2xJYkxLL01ncDhWeTNsZUFteHcKLS0tIFdDWGtYOTNhaHVabXF4ekZEazJ3
-            NUNUdHhEZjY1QkFoV2t1YS9SeXdZT2MK+mbG5tBmqsgVWQG+UIneGl6NkmDmp9Gq
-            ebHAPLSq7ZzXd5cc/YCWEciLbKqua3/vhmYVaCz0KG570eYKsEubfA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBYTlJIVDBSQnc4eDAwSXc3
+            LytZNGhvSFRzdUp1SkdwWWFjSDlDbGIzK0RRCkFVZEVJUllSNzVYU3pWVlZwcXRk
+            MGFqak1FTnEySzFVaW9tTTkrZG9tTWMKLS0tIFN5SUNDcEZRVEhSY3RjbEx1MEVt
+            UFhGckdkZUhwdWxiS1EwVW5UNkJtVTAKInG1PIjETga+VMyFivM6nvtIE02CQeqR
+            JqeIYdQQPqr/2e+MuRG/WPCdY6RHyDASiDggHkC3fBinRWaqwSlhuw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-20T00:06:14Z"
-    mac: ENC[AES256_GCM,data:bLzF4zALrxbLhh+2uYgtyz8N9pgRb9SOZUjjOJEzQlOXEW3ksvFfo2XyTn1XddIlCHFAmcAhvtr5uQqyxTSecBjK59s/YKd67W6pXEkoEK+zynrSlYW/ZWqhW2Mi8Jg+9VyqBGqOXIIOx6Un3YXHiNhk8Bu/vdBgf3rZVW68sDI=,iv:eILS5Z5hMSVIcEJDMxM+7xKxF/5vkKPfHYu+0lh2NSs=,tag:4mkiXq0MWY9XF1iJs2iWjA==,type:str]
+    lastmodified: "2023-02-20T18:58:54Z"
+    mac: ENC[AES256_GCM,data:Gzxt5zYIy5x47xtAgmLUoWb9XBd79tCaMi611CUTcJwgTkIkA+KyNzBNVSpIa7Cr0+Swk4PRgmyvx81cCrqkRkZgnEOn7YHOeaNcUK037iziLz+i66F9gNg4mmB+UMZ7fCqNj0SF5a7W+6Sww54C1Q8wrDTo1I90U6zAWEytyjU=,iv:zyIgO9He0RCQeegMF6MRmt/4vxVDfKs8gqOfVe72KY8=,tag:4snkhvEALuSMVIMxu7a2yQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
