--- a/ansible/inventory/kube/host_vars/k3s-04.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-04.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:QOWcR6Md,iv:rKZEmiCVNpNY65un1QcEcHhJ2UtG3Fmus5eryVHcY1U=,tag:oLAnv3IWvDzWGRWHRIpaFQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:XK8TeUl7,iv:4h/Vh/ekzN/aM/BJC0kZw4S8H0Xp8LaH9L14g+es3z0=,tag:TzdnVDymHJii2rJxLRuuMg==,type:str]
+kind: ENC[AES256_GCM,data:l5cQMqoU,iv:iTmOQ5J7/2lL+EMloJ95PQ9q7CUWd2TXkOLRrhQo6TE=,tag:ro31iMCu5pGTEQqSqKmM8Q==,type:str]
+ansible_user: ENC[AES256_GCM,data:Nmo8wJ87,iv:sRz2/7bbK8DaLwth1ni3+HpXKdssegZ1d9pX6CNgha4=,tag:Rc6UYnVDU9tGoklD4V0VcQ==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB6UUFXaHZmcEkrRFJLLzJG
-            L3RocFZaODRJWU1XdmpyWjRINGlVWmU4V0FBCk0wak1VQW9JdXl2SGlhZndnc2xB
-            SklXaDFBTGNlckNhYXpTemZycWVYY1EKLS0tIG0rQzJoTmxoVCtaZ205Z1VqcUdk
-            TW9ZbTdYazNaVlVObk9HUmc5N0xEQncKbguvEKKp3UFMSYgCGf1DsSP/r7QZMZA4
-            gYqKigbB2OmtGu2nVAmnF1OTSD68cCdtBs39zFfYJnVY9yJ/6FHCeQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA3bFAyTktRSVQvNjVLTVdM
+            eVNucTh1RTQ2cFVkLzZydUU5a3lhUUxGUURvCk1sNFlhUUZPRlk5ZXNOT1g2S1NR
+            eHZtV1FkTU9qOUNmV29DQksxQ0dKTEUKLS0tIFdTODVqNnRiZng5WkZSOFVwWEZz
+            R0srNktvNzVGSWZ4UTAxZ0xvV3VOYjgKUpJ6/6YJJqyKSa/N1c/bkJ5LgZ9HNBRM
+            jHhuV7VSoE9HPR5yFJWb9YdDtwzcCVmLQ1cE4jcxftHTKMd80j8LQA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-20T00:06:14Z"
-    mac: ENC[AES256_GCM,data:W2rA6es4zr5/E9XJZ151tSPq4rbJ4FzdcVHn9OKdpbWz1hsJZYbxEgxDO8ECQjeOctyexqpyljxROSnBTWqZuezCfXpkj3rXIrh91DOsyDMke3ooXN2xmN7zXMm2cDB6wBWyv4TLoVTGgqS0bjCCypS8qcnHYZtRbhfNVeFjBnQ=,iv:V4jyjTEwUB0p8n0qWOTmifmnwFDeMnShTLEuktRuzTA=,tag:6bUnUxqw4K/t6+gHvvmZmA==,type:str]
+    lastmodified: "2023-02-20T18:58:54Z"
+    mac: ENC[AES256_GCM,data:RS++wfHec9sOxCHMwOwcxyDowLGZ6CF3A9nJT+xy6lYms8s833tDiCsag674cZr2o+mZUUZuS+CiXjQY6U5nm1Mc5GsWszr34KHxaKsXl3AQ3xRsLeiz5j3mdmfAVpmgW9lNwu20SQzXsxKyFK4tEFAFgalOCGQY4pzDJZwDLVg=,iv:ZoKMOizsaNSTXWxYAB35wXCvHHAXTHtISZKv/g5KPjM=,tag:YPSs9nyNP7DEg5CwqLHeIQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
