--- a/ansible/inventory/kube/host_vars/k3s-05.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-05.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:tITYDzEW,iv:WpgAL+LC2mOVgtiHbK5gSwauwNhX1nHCtKCbfUMMvpk=,tag:uDuu0pxpTPvbYvk+SUHsuQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:lOZJ26h0,iv:jtje7mDlXK7qqhXu4QHl9hapzmFTXhVRZqfJlwnePco=,tag:77D7et3RBF592+OrJcEy3w==,type:str]
+kind: ENC[AES256_GCM,data:VZnyI+II,iv:Dq6P3ydAF5RQLqQflr+EorBPTJJXW9FmX/gY2RzvkCA=,tag:ck5raN66Zyo2XrT7MchZFQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:7nVYTwmu,iv:dWmRkFUpcsrJ7MbIu11EOw6iQzIwWbIrkK8F00jhXkU=,tag:IPFoGp7yj8UXqCZz20csKg==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAxNnY2cGJWWjhFQjdueUw3
-            YVNHR29mOG9zckM4bWg3eVBsTVdCTndndTFNCk1NemZlV3kyMFhtWjVUR3haZ1Bh
-            U0pjLzNVNWlnK0kwTlZzVmxlMTFZM3MKLS0tIG11MElkODI4RTRINEZ2dWgzZXlk
-            T3dPcnlzbnllQWcwTEpoakwwL01yRk0KORebISKwfn+QwLETDD04IMWWfx07zunv
-            Rmv1w/iNERAPVaO9t+qdyqGAGSQPIpZm8Z0YcofoNxN2wf4GONBTSA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBEaEgxamhoQzFRRlVpdUFa
+            V0phM2puTHozVSsvenF6Ly85VnZ1dU94bFJrCjNGL2hjT2xjbnBIbFZHZ0tWcXRB
+            WUtJd2wxSU5LL3dTeE5sY2NEUExVdDQKLS0tIHk2aHVCZDNTWU1jVTBhZzhMUHc5
+            MlVMQVNwVlhqTVlTSVEyS282RU5jWGcKUqlZgk5QmjGrBywzXuf4FFoEZ5ceH0SH
+            PvcpFFz6O6QRHA9DteTbxvRWbZeVcBlq9RxOn8ERuiXZgzzN9b0foA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-20T00:06:14Z"
-    mac: ENC[AES256_GCM,data:NNCdxKDWflmV89GUqpxtwMXksTtKKL10AVLP0ZUKpPESmCGNGddddDzFAkMZuwfVGNEqw+aV3435xIINCLQm/QiCkNu9KT8f2WFyv+JTg0ygy/oX/SXNZXDrzTpyP0X4mueDFoZOM34GQhbiO3N2TI+8dBj4axyOX6EMlxYrnBM=,iv:jfRdBjL2n+hUsdAGIgYQoXrFUrxDsxzYTgqVdBY3698=,tag:abOeYxk5MP8Vk3qn2N2lYQ==,type:str]
+    lastmodified: "2023-02-20T18:58:54Z"
+    mac: ENC[AES256_GCM,data:stGDny+wg51vrtCskldXUNGhtFcNUGqcda4AFoA39AIMbRzKZYaAoDIk2RaF4jJa2nGcP+7Ok+iRC6kCS2XywDU3aV1R51uNtJLHBOSMKqixesE/JnbnSkYsLaZ+tdnXz1vHhx2990hKzk9TIyRjcx65cabsDqhHlM53QpRYbnc=,iv:2nIQf72ehVsEE97/shKbywB7bHmoVyaeGgASPAXuCOQ=,tag:6NMru+3bcjS1YqsEqprvSQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
