--- a/ansible/inventory/kube/host_vars/k3s-07.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-07.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:/I51MoBV,iv:ZJ35sgdKWE/S5qqzu71OKEQ72n57QiLuooOfT5nxRxc=,tag:fD40+dxzXDCwLD1S0WI7bw==,type:str]
-ansible_user: ENC[AES256_GCM,data:fqLFpIrF,iv:CTgJs+LOeQ0NCJNzsKLj2ImNsPm2y+berJyAZOcB+YU=,tag:ViBxY/hf4gg/Qu9rDf/bCg==,type:str]
+kind: ENC[AES256_GCM,data:SBj0sD93,iv:ag7dVE6lRUR9BR9vYJV69FXMbsx5/cWWD9E9A65XhIs=,tag:t/7HVwhdei3NyLNPB23v8Q==,type:str]
+ansible_user: ENC[AES256_GCM,data:kCegiKc/,iv:fXCsaIPRqqj/BWmsFWCx/jCPayp+IUsuY7vv6LhSfHo=,tag:sd8MlKxkMbf6ol3F0Kk+jg==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBVVTFrT0IrdWRxcmVka2I1
-            R25QK1JqSU10YS8zSTQ0UFAzdVpYYklMc2ljCmpCYVZHRVc0enF2LzlkTTJsbFhP
-            YUdpVG1vQnVTVGpUTFlkRWozandyZHcKLS0tIFU1bnYxNGhJM1hXb1l3NHNaTm5m
-            d0dob2Y4TUNGOGg1bWpaRzhpUTBqamcKqJrKvJcA9tw1qwbw2NTXE7U65/OIvprY
-            aOk+ZnKow97HOKUIpGPlWY6NqjZyOOTqka3bT10kbyaXdmGFnZhfFw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAveElLZVVGZFhEdC9tZWhu
+            TkQrUUJnaVRCbWpET0NJc0VCaVNGY3kyVW1RCmJKb0Y2MmtvcVFFeWpZbFYxWkFy
+            czQzNDlDWFFqeHhEUDVNMk9ZYjZVdmcKLS0tIGlnNnBRUU9SRFRkNyt3WjRpNXpL
+            OWZrWE1FM1RXcTFHSXl1MXJiZ3FkakUKxuqH3ulMDHwwx/nSw0VaOSLWE9fjIguh
+            zLz1SuXG0wiJYKZRRaRwlLiD85qJla57BTJQQuJDnslvmRJEpmgWiA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-20T00:06:14Z"
-    mac: ENC[AES256_GCM,data:2+kSwGIJr1aS2VT2hBDjJlBsj1HLED2e1sd1WB44Egue/fOcuTNpCkRkLjeA7+lKrRWlDKgnljtmVwpGGIeyYmma6A8vfkXEsSl2U5Ets/6pJTIkaZVwmV+2KEDJX45lUP8udCr7G7pQoUJ8l6IygPgcbyzb3vD2Wu+ddNOTHQI=,iv:S+88tqZ50dQyAohP+Qge9snavIDa7cY35isgrPRgu6k=,tag:cg0Jg6wjw3HTglddtza8xQ==,type:str]
+    lastmodified: "2023-02-20T18:58:55Z"
+    mac: ENC[AES256_GCM,data:S7Y9bef6M3QGEoIdrQcvvp33xMdSliE8SQn0nD/3HjUlLSEQUX9YNbTZD1NGz3Ib4tqZiDTAI0NRo7vPy062AJo0e4fbAuLbq1m9bERTYJ916WXg1656QUYvsjeGYFkit/80sgCDPHVSaXsIuSFjTXgwu8u3mLIzTXvfAnQUPaM=,iv:WiDw7vzTHzBCytBTfKtNYj4k7BjaisqRQdacD9J4j84=,tag:RxRzc+5Zdd6uZHtiP0XaHQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
