--- a/ansible/inventory/kube/host_vars/k3s-08.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-08.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:vaYdxhj4,iv:Ohs0vAeF5ud1x51q+uJKR+wqmjL0N2kr+OVdX10jE/Q=,tag:N0OdImyj2MJ4YioEX8Diyw==,type:str]
-ansible_user: ENC[AES256_GCM,data:cH1f+WMu,iv:J0zr+DXJnoIAFwHcWoMaScKzOniswJY0fjICwILUzkg=,tag:A8FyX77zWHZb5KbdzWuWEw==,type:str]
+kind: ENC[AES256_GCM,data:vQ4Wfhhq,iv:E43DplWG7iWpmkY/A9XwGv8I6A3SbUNmSTvPMzHr8As=,tag:mx+b7+4Y157hHwv1yEWiVA==,type:str]
+ansible_user: ENC[AES256_GCM,data:orZBz7lS,iv:vbgsjLLN5kaCRSNaX4E/7DF4G4VSZqWoJVHHkJZVaGQ=,tag:2JdXVji3fohRJm7BHnSSJg==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBxMWxrOXM4YWI5ekkxMUlG
-            WTF3RlB4ZXVTbUZIT2lkZ1ZycjdJM0E3N2tnClpyT3YvMk5iTFlKdWJQOFpCQjVF
-            blh1SHlXaDJ2d002RXF4K0YrYk9IeDQKLS0tIHhrZ2loOUZUNzRYeGlTYVRsayt4
-            ak9XaFl1Mlk4dDJ0cGY4TW5ZTzNsaVEKtN2U5JR6yBCtr0ss1KKpKx7JCpbGFWIp
-            4vcB5sGT8kC1vmoY+dwDut/yEax6l8CDqmnO/6fKpBulwXfOpV3ywA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBsQWN0N1hXcjhRS2dBSmI0
+            b2hHRi9YSGNKcFVYWG1LT0dscXdyZm9yb1Y0CmNhUWFOQU0xd3NKODhsOS85eE9Z
+            Y3hXKy8vRVEwU1FOWGN1Uk1lZ0RBa2sKLS0tIDF3RHBKckI2TzJoTVdNU0wrR3pV
+            ckZ3T25mdXZSOUVUa1d6NjNLNWRYc0kK/BvQA5qF6Glh8Dthyw+KBKbkRDnHUHLB
+            hkOa2bAcTUDBYO6HpXrdVTK9/Dv6tqN4ywmJmyCPKqEwNMsslm3VNg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-20T00:06:14Z"
-    mac: ENC[AES256_GCM,data:CmFHZOBFhaE45wXqc05KV67kIssFPI7PtJ5DlYTJHsZJtZm1N8Hs5becXn03mbTsajI2N49+tckPS5LDG1f18tccF2byBRgNPXK6rFoOUVQjO057wRlF+65LdvsIrNgr8i1vQnQ/kWeQunnbtDV8vcAgRa1MkAT001rJXq7Inao=,iv:GPY0JvpDuOKkhkbXT7ljFBsl7vm9PTb4zzOPDtYuIns=,tag:UIdWW3ptpnhoruOCSP1guA==,type:str]
+    lastmodified: "2023-02-20T18:58:55Z"
+    mac: ENC[AES256_GCM,data:MTY1BRpjg6XOL6ui3oEwVoG/mZT20pwCPf/29mi1uCvLl8lQmsyo2FiZ8vCsINUxgtg5poiWG8sNp5k89CQLHjeP3KI9VFDbQ5s0xl2spMo6r+HmwJW3Y0+Sp+EkZO+tVJe5KtrE8Y1nKZchZ1xk1Z6XmTovZyAMNHydFbiRQ1M=,iv:brGy/VvAr8jUliVtzSTPrB0kpi37pR4Vq9qZft5XVSQ=,tag:bWToT6aRrYkJRapLw4lN9Q==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
