--- a/ansible/inventory/kube/hosts.yml
+++ b/ansible/inventory/kube/hosts.yml
@@ -21,3 +21,5 @@ kubernetes:
           ansible_host: 192.168.1.16
         k3s-08:
           ansible_host: 192.168.1.17
+        k3s-09:
+          ansible_host: 192.168.1.6
