--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,27 +4,27 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:DxnfJVNHh3lbi7Y=,iv:kPgEYciuHUfuhCv+4yZrM9KY2zSUg5OoMCR3om9bYoo=,tag:wywynuvkOzVM/btvvTYz4A==,type:str]
-    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:NfvZlN7uvCh5g6j5GZrXxKCzu12M,iv:9izLgd7D0jCQOPEaC4VKoCB+hMXs6S8vSRBfoMNmSII=,tag:gM0ewwgfO8jpsyW2kyoU8w==,type:str]
-    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:hUFEsOcHmPxcu8SrTX6FwMZer3iHTjSA+tCbefYijxuGVEhuCgCwmVRJGK5XCxDdYjtb0kZ9sKutAdF5Xmj8DDvzjq92haQ=,iv:uqE4130FSesYIUkRKQydZUIcXsjzj47jFFrTtNG/PPo=,tag:8fPbk+Fd5UjY/E0Tsvw+Lg==,type:str]
-    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:Y9YsOIBIbvZzoUrljE1UsSjbEFzBaeFLvTEBMYDCqcFY17s=,iv:U65rU57kHNe4PqMehLP8Owt/O4uCZOAukJ8qQPKWJaM=,tag:Nbol6AnbQ2NZT3tBmrbOqw==,type:str]
-    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:6ax2cmlK4VVDhNYuL+3ti/567w==,iv:n8gkAom9RoIPD3LE0Ca9whlNXT9LAsrKR5sHbIYKcXA=,tag:skJaeXtuVkO5sBeS/M0rnw==,type:str]
-    SECRET_AUTHELIA_EMAIL: ENC[AES256_GCM,data:Ah0HmAd9zgQDzpFFKkKPyPV0Afl7,iv:qid/KHpYxSsmX27bFnQu4Fvn3BcLctzUK+rLwkY0oG0=,tag:eBy6tWm45aovrEERSpCz0A==,type:str]
-    SECRET_AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:axs0OU31KJk=,iv:zjOZXvx9L+7EWoswlF67Mwjb0T9GPt++j6OS1svRYr8=,tag:PsrcsQ0/hmUhiEJStpFk6g==,type:str]
-    SECRET_AUTHELIA_PASSWORD: ENC[AES256_GCM,data:wAZ/gSmp+tU=,iv:8ki+iiC25z02t9jSYwRxqvvULpUddGG7zqM8eLC4EwA=,tag:YyFVbt+rVxdevcco2sAIzg==,type:str]
-    SECRET_AUTHELIA_JWT: ENC[AES256_GCM,data:HfAmJa9eKUxbgRqn+TbA2X35s+ol1NOzpYzcAEVW2v4rkCQ+aYuxwY6glpPvhhRYACQmtQKV6d5ZrA0DU9TIBw==,iv:NiN/Nl4KsUVG9l2P46GxmDskxHC4Kl3/FovrSos4jAo=,tag:HOBuYC+56m9vPr9N9gNKHQ==,type:str]
-    SECRET_LLDAP_JWT: ENC[AES256_GCM,data:XgGTXP4Ota1GWzAPVW84252fBc+0e1ikJhVms/2epAyFDVQiKtDr1ue5f9hhwnUyuLWhiTRhjueU2ryGrjB7fQ==,iv:1dCDUWdHfheMPu5OoDCDr9Zuy6/G45jL/qfLPhMMSP8=,tag:G99nLcZ/CF7nh83QtXj6FQ==,type:str]
-    SECRET_LLDAP_LDAP_USER_PASS: ENC[AES256_GCM,data:wlL/GTgvP4NR,iv:g1PSF7qi7jQyCnOwWPUAeQITew3hhwrbNu37U/ebacc=,tag:bNkl3MpEgYXowgzSo09QeQ==,type:str]
-    SECRET_LLDAP_LDAP_BASE_DN: ENC[AES256_GCM,data:jw/uendDcIWjeCrV8yIg,iv:14mQD6gA4MjNmRQIT9KTu+/IBfb/hRol2geyFO6Iqhk=,tag:/01KPqKCFIXCNVvW317xpg==,type:str]
-    SECRET_AUTHENTIK_KEY: ENC[AES256_GCM,data:E0/kTCPamGrssNKafISX6XGVGfAb69GZTmAuRy0mORRkd76NM4hTY5EPv2LkFwC2JLQ=,iv:V1DiRm9iPkVzvE8x9FB0w5v2aAmBH//t0Hv+iLBBVXw=,tag:Bhto2ImUEB3otGlOT20zXg==,type:str]
-    SECRET_AUTHENTIK_SMTP_HOST: ENC[AES256_GCM,data:a+tcfo6PGpnmekVB0/g=,iv:lPTZ47kBrYqhz4B+ebvq5NvLZ8KNsNQ2ROM+5/X+kGM=,tag:Q5cphMv04+fOv6t8oSlZyA==,type:str]
-    SECRET_AUTHENTIK_SMTP_USERNAME: ENC[AES256_GCM,data:/HuREksxlhyw5huMtXj72KrMawQ=,iv:wyAMlVAvSC/l8hk+srdFrRgjDQv9L5UyFNC6v5zFIUI=,tag:icHeI6id6lT5HzEQEczHSw==,type:str]
-    SECRET_AUTHENTIK_SMTP_PASSWORD: ENC[AES256_GCM,data:FESDC+vcOXI=,iv:9x1DzQtU7dTmd7EflUURkTMU8g77YXz4w+i9cjujdts=,tag:TLPIzk8AXGi+c7gHaSq/EQ==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_HOST: ENC[AES256_GCM,data:ATu17ZWmEWcPH6tIqXYb9VCn8fkygNkmyqKRN3nvQp3ZuByRMQ==,iv:u9NkyUv2OHbciByxo1f/jXDEqj+ZK1/NvsxREmsaMlw=,tag:FBmSWHZQaH7KryVS9/EKAQ==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_USERNAME: ENC[AES256_GCM,data:PLBf6Rs7652o,iv:pyO5SXvuSon/ZygqP6135F2slicDalOupGGvU3XVSE0=,tag:awlTGnGyWibWm3XIVNi/4Q==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:YVf6GpOmJh8u,iv:6iJ2YOgs17H5PXEsuD81MQ6Sy6ZlrnQUTyN84rTxUOs=,tag:/VgECnORKTRpRIxe0rKHeQ==,type:str]
-    SECRET_POSTGRES_USERNAME: ENC[AES256_GCM,data:wCM/VUMujA==,iv:canOLSzCFgtiEstG02AihylclTBrQOWMYEI6f4gJ8fw=,tag:VVCG01GU6cUtttxmZXZ0nA==,type:str]
-    SECRET_POSTGRES_PASSWORD: ENC[AES256_GCM,data:m/7Wjsz8YnOL,iv:Y9UxFWQREaoIoXXVHyXUtNN1OyG27+QckIAE9fXVCQs=,tag:zNvai8dNZNNaawmZO8tEvw==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:GY260vGTKvDsbys=,iv:mOOf8MDa0dg8WUyW6IHmkf+d9i4+WO2Fg+zacYOKZIo=,tag:RqbCzdlHlhmHL70RbopsCg==,type:str]
+    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:6g9BV3D2ooqEKIDpfddv969PEUZl,iv:ze/c/emGfOq1WRU5KejwZe4wU80H7sIpftcN3ycevDA=,tag:TcHKO/8sVOod2GqAHuJJYA==,type:str]
+    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:3elQCmHLoNZr3eC5rBp7p0AUZgyZv6UGUJK5SDP9dbQ4hlubjKFUiczrqHcFNbRfC14IYosu9Gyhgl4KRbAwnl/HUla1C9o=,iv:EKFDInb6N+rQswAQp0jvqjQNcQzH36icyKnjlnNW1h0=,tag:Ja8Kr6GfMhz0ft7RP/E21Q==,type:str]
+    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:df4kgvH9CyYEeFWk6vTxp7kLVMz0pqBDaTmYeCRP7uIHytw=,iv:KlVFk0thBs8bBtbYTN1GJqeeau+nC86qvbQvfB9SCjs=,tag:VqSxGopoHTzXCU+zKIqVBw==,type:str]
+    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:EHUx6eVsdim3HkZlbeA0rdXNrQ==,iv:78+9k08t6G/d4qoDWCC8Fy85gpKZfrsyxypwHreHkD8=,tag:zRCGkjn55fuG5Z6+2Woaow==,type:str]
+    SECRET_AUTHELIA_EMAIL: ENC[AES256_GCM,data:5pgF0Fmkgp19AHwIVi9E0FVXLEon,iv:xLKAjS6H0hPondrXOdgOUneZPQmATgBh3YxNbIXsPd4=,tag:DaejhBg1c9jVPEABaeWctw==,type:str]
+    SECRET_AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:ugS7vXkHf34=,iv:i2kQgfAKGTvDIA8oH9T46sRlzAge4a5dM5v3aB64qT8=,tag:E5yMjbfSmVtcok1/RFiw/w==,type:str]
+    SECRET_AUTHELIA_PASSWORD: ENC[AES256_GCM,data:qjvmiUO1YNU=,iv:oZ4ZdnpL13q/b3Lb+p1KpqtPvnGHnpoK5mQYZx0RR0c=,tag:b0jeTcgB7ECTHNmYfEK/EA==,type:str]
+    SECRET_AUTHELIA_JWT: ENC[AES256_GCM,data:Evjs8P7EAUFs7gsw42rSUEH4fFPPU5WpT2NeDJRQrcEcFOgqvsRl8q3lB6miefBZQvwitDFq/aHpHjIJHNzRtw==,iv:XzlkfhrQEpf40TtRlqJvjyHD/qB00jPSSAcrpmUawQg=,tag:bOhGWEnl7TzShQ3NrvX84Q==,type:str]
+    SECRET_LLDAP_JWT: ENC[AES256_GCM,data:nVYzv4ziTP5bagj9WESDWrc4rqR83oXchrt5g1qzGlgaGSoeYTqAO6T7Mc08AaNShNtExXg0Rcm+ECgDRW2Fyg==,iv:KInCZ8aEXUl2V7191IT28kknwvCxfhJRkrXQiydeqpQ=,tag:2vT2ZnE1ibP5gt52n6wCxw==,type:str]
+    SECRET_LLDAP_LDAP_USER_PASS: ENC[AES256_GCM,data:1dPy5rVec1Vk,iv:VBar0Fr9FSPsZenmGQJVnsd6bTvKHRI0YNZrTGCGJGA=,tag:F4Y1KS6vAY+cUsOXF4B01g==,type:str]
+    SECRET_LLDAP_LDAP_BASE_DN: ENC[AES256_GCM,data:oFurV8fNh8wbUKvk4KQC,iv:6PVMOG3+fwLbxjT3jUMOOprYlidmwBVVJTJG6M9gPdQ=,tag:aVAqIo+CTjOVVtx43kGp3Q==,type:str]
+    SECRET_AUTHENTIK_KEY: ENC[AES256_GCM,data:hWYSgD+qig6vScXnfU3eg6lM1FaELegtDfJfWPf2wJesVI4fiUAzs/g+ZfCWpnazjvQ=,iv:cIgVhUnRF1LdSYDog03eqiSt6kdze1CFOt6TMApxY/Q=,tag:R0Kj8hvLqqGZWzlR+I0EyA==,type:str]
+    SECRET_AUTHENTIK_SMTP_HOST: ENC[AES256_GCM,data:B4R9KuYHsXrYnvr3vas=,iv:I2lqbe9DOfK+PBWlKdX7JC2h9Rbt0g8B3YmMxgEH/SY=,tag:Ctaz4SyD6OwDICNquuQHsg==,type:str]
+    SECRET_AUTHENTIK_SMTP_USERNAME: ENC[AES256_GCM,data:E6ahyngrg/5QKuts5u7m2hxRJWM=,iv:u1+7tn4CR+zImDxe1xDDc/D1vQea5GkvEJKwWLeazRA=,tag:LbMvG6lUNhPbDvmbg+//hw==,type:str]
+    SECRET_AUTHENTIK_SMTP_PASSWORD: ENC[AES256_GCM,data:gVTuF+wisNQ=,iv:L9WMrOTo7Z8yFxNSumwnuLx8sankk+wD+qTGJNfNf3g=,tag:58HXyJGL9xmejwFXINa3Eg==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_HOST: ENC[AES256_GCM,data:8khP+GQtU33D7tRwIYO7wXj5mLPz1LAMxH6HuBf+1npHsy0NTw==,iv:AujRm5qArYaxRaEPpOmYw7KnDQkbCuSHYNn/EX3eH7U=,tag:/TgIUp0o4ORyfIqRi0/z0g==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_USERNAME: ENC[AES256_GCM,data:TwneVJZmMBjZ,iv:Xofq8wziY2J8HNpWUMy/QRR9Q435C8U1+4HKbuW+xWI=,tag:kV36McNScqwqcAd3mGVNbw==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:R7/RNSmgBAm/,iv:TdTvoH6N6kQiGsbkHRCV9VnvZ0rGu+BP3eYamCTqy4s=,tag:e14eVb26AOrhSNYYOI/uag==,type:str]
+    SECRET_POSTGRES_USERNAME: ENC[AES256_GCM,data:24xolgfz0g==,iv:q/9UoUQSbOSdhMqj/G6c4iDy44LRBXi9ZKWkjkzrsKg=,tag:tfIBhYIOIxDtOd99y6g74g==,type:str]
+    SECRET_POSTGRES_PASSWORD: ENC[AES256_GCM,data:E0Rg1DN+gm8z,iv:NBDYxWnC4Hs6KsfjYn+eE9hY9vbSu5RJux9l4ApDv5M=,tag:HINR+kmBNS2JYVTI4jabzg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -34,14 +34,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA2ekYxMTdGOStFc0NJdTgv
-            SWRnTTRpd0RseEM4RGh3MHJNblh1NWlJaVN3Ck1QN1NPUHFXQ2NrSlYwdjhISEla
-            OGpWWEVqaWl6Nmp2U2ZaL0hRTGZUQXcKLS0tIEl2Q0wzRG5kUHQwTTlZVlVqOCsv
-            UnRrdkhLY1BmWEVNU3FwUlp0T2lhVlUK2mbJhM5+gjrNYcKtekrZ53GAHAiG0T0H
-            j6mCf3YTPDDw4K/mp+/uqCEV7kAFHdI0DwfXnVpegByja0PFaoNzVw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB0RHA4c2sxcUZMVy93cGZl
+            c0p3TEU3R1BMRytOdSt3VHJDUXBCOWZtVm5JCklydUxxQ3RDUS9iSWFYVXhvRDVX
+            UVBHcm4xUFQvZ29ZYS84R3VXZGlqSFUKLS0tIGV3Z1dRZVNwVXprMlVHNU1kbFdZ
+            SUt4Q0RQZU9tSWlzZTNJalRJdFpGSzgK370t6F8xtpBwkvWd+frQh+3pls7OR+FM
+            JZQ9bdTrxspxgOBgs8oo2kqq7bORtJAUpM2/dw6LbFQfJoxLPT5MIw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-20T00:06:14Z"
-    mac: ENC[AES256_GCM,data:NGA5aQTZW5nQDWg233aFlMVN+w0CXI4hDuxmmafrH7oPG7tzcjJolLAeLVqFvXNXHfCrIcWxOEXFnUWOnMIHkKU2rpC4LI0DfSzXVZQrMVwaBM8AmM+fu6OrMkQCF6COKeN5bAcS2pjiJNHlVZIRG6URRwiVVxoEnlaklapDcV0=,iv:sYANOLvJ4Bo9mxY7CrdU2FybolulFvr8027oAENuhoQ=,tag:INylg+wgXkOW2KPcd9E7GQ==,type:str]
+    lastmodified: "2023-02-20T18:58:54Z"
+    mac: ENC[AES256_GCM,data:/M3Rv1znrqowuJU4qYJO9ynoCvv7UX9bgHKl/c95OqsU5OvQC9mLe9h9uosUm/45q0flxsI3X3BO6Naf4tX6qXgPW0SheZAP0ExLYJhib5iV5IC7wqTaF14xSIsmAwf3hPvsoxfINfxusSejyUfttCv6gqtnghXfZMsTGD/J/yk=,iv:vuE5L7vsHr+RwTe2FrpOOIJwHf87XYLF2N9AT9eo1dA=,tag:+JT/8idOEx4+WPWZJFl9ag==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
