--- a/ansible/inventory/kube/host_vars/k3s-06.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-06.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:iBgQ4asI,iv:FCwbBw3V87+CQgQqGEdOcPHPPHDGY22H9NGiDzLU66s=,tag:Y8jISzY5oVzzsomVlLg7kw==,type:str]
-ansible_user: ENC[AES256_GCM,data:yXgLGQDK,iv:W0CgeAHDU3LMvbWNkec8f3+QHwo3YvX48XJR2x33ong=,tag:BoFyOj/u6U3q8/J9uA4erQ==,type:str]
+kind: ENC[AES256_GCM,data:M6qMBDlw,iv:vJLkjw+tNjMlUL1yTktX1mOZ/F/dIKJxZ8ltTurz+Ss=,tag:BnozIpBbRlTkPLOgxi6QXQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:u/XZ0xFK,iv:ddiyVlRRbtZTYIpLMQ+2kNbr0o85DT3YuYOETTnpUSs=,tag:RGp5xOpLBjX/BxOLwtcCWg==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBlUGRreW1uR2piUlVDUGRE
-            QURvK1hDNXZRdlRaUFNKMElVSWJXMW1EVUh3CmpuMjBrV21vMXFmdnVvMEJHWXMy
-            MTBaRnh1MkUrbFoybkt6L0hHWjNTTm8KLS0tIDBlaGRmMG1UUVRJTDFjbXdHYk05
-            aW5zUDgzWnpQajRVZTRRWXFtM3VRS0UKCK33wvjALrFyx6jR4PNJxpdNrneLp9mW
-            pnivl4fWX5HX2buYDl/5973SmMIC93zwZYbfscc9NS0fIp5nfa79pQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBtVW8vbnB0cU5HbUhxeHls
+            eUx2S0RVcFBiaXh0YVAwQ0lzNmw0UkQ0K1ZzCmQwaHlFYWY1MGNGb3UrS2E5TkFR
+            SjlBY1hURUp2RmVmY3Qvakc5bXplRTgKLS0tIDRxcnE4NEZlYXNleE5WU1pDRHBp
+            U2RPZW5UUm9yV3JXbC9KaGx5RTJsZFEK44Kb8yPbS/bqQUj8TmbTEVogVJQEhw5Y
+            WhNH5uVilwKJefbxmxNWeOXP0uN6B1g0eVxUyK+ELuKLxI+IHDJhBg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-20T00:06:14Z"
-    mac: ENC[AES256_GCM,data:XJnSwnelqrkALRMGgXG7H12kg3sVkd7yaIFOqe+KwExmDdGmS549WFDQntdI2ByvLgYLU0t1FXtBiLx7ZHQF2CxJ/g1Jvx/yUuGE1FyTHSiDkeJ9q6c8Izc9W15I8rvWd/laYe1bGZw+RP/FKoNAXATGL5rpdegdvaAhEfBRBO4=,iv:bQ8vQZW/NKIaoC1P7URjArCIRD10BQkgdjpigFsN7PA=,tag:A5sAM3Boh8j2+EA6poSa+Q==,type:str]
+    lastmodified: "2023-02-20T18:58:55Z"
+    mac: ENC[AES256_GCM,data:9fGj+MKnl/6N5iStTTsaocJaC54b2lBdUOLux3a21AqkuEUh1QXI9Cb51/1npdVmwNzh1VI/poOx4pi+4x1kM97dP8/9MTeXxcEV1NKRROLlWOz/fJg8i/8BhIxQILUmLFyGxYDyHbAf0//nNccn2w8NQ2rHTaBCWPfQLHKHgnk=,iv:FS0NpilaS11huBKQlEJGRDo87ph7VIXn0sojH0JN2pM=,tag:f6AnK6SHNHjuNFzQVG04zQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
