--- a/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
+++ b/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
@@ -5,9 +5,9 @@ metadata:
     namespace: networking
 type: Opaque
 stringData:
-    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:VtxyLHn2aZVQiFBIufOLxdqgcUM5,iv:DB1tsjiFyLNo6syInW9/4JLRhojzH+mXx7YWBjcZn0Y=,tag:zDop9DHDr+EggBCkuswybg==,type:str]
-    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:7S01pMefC3ayiQJXqG3lkFyQJYz1hvLnBlYGX60pLmk5CIW3Dw==,iv:gvw4ywR+qbMeLQJ6RJ6ILfhPpPrsri3C7Qcvfah7Imc=,tag:gddzXa+lxomZh8p2IHQnCA==,type:str]
-    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:wo+F+cFxr4Dr5gI=,iv:NEiNY7s/EBtTTmZzNHgfC6OLEOGEU6iAJbVraOJQ1Ek=,tag:PraA6kUbjNcyTv8RB+dkCw==,type:str]
+    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:rvS0/xqh4uY+hxv0kkvOYW/Ay2SC,iv:kJrxo1Vt+vU8cWJHLlZCjoDwfVqxGHGblIgHNP0hv+8=,tag:JPyhyA3oA4SaCOHCiTOLDg==,type:str]
+    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:au21wQSu/+q/AnrUs4zyKMdk+KEwiqzmx+leRZq7R68sJjwmyw==,iv:DlvxtkUhBsWbI8h7HVDlxVimZm8l5DXOhZRGjh+LhK0=,tag:g07gPCnka0f/D9oaUdiT7A==,type:str]
+    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:uP8JIUzLYfcWVRc=,iv:JezRgh6bEPWGqY24uQ1CXEVxHCk7wO893HprADAtDew=,tag:pmSq1kfYj9Xg+/kkNKiRFw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -17,14 +17,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBCTlVQanU4aHFxYUlEcFBH
-            bnZqanZValN3RW1mVG1Tby9Xd3MvZlZKVjBBCnd3cUdFajlTZ1Y5elJrUUVPL1da
-            WHFMaEFndlhpUkVERGswVTMvWjZyNlUKLS0tIEN6UXhnZ0JBU1VmOHZhcHZpZUdE
-            NFpqN0dHY2sxWmhoaGNCYjVjOFJsS2MKADu2MxiohQDpFz3YN+IzCP5OUzJng6g2
-            AH4fw3QHMrjwAZVn8BaB4h6OCcM59clKsmeAV1BP4DbUIXxAsoC8qw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBlekJQNGJGRGNmNWZZK1hy
+            a3BxR28rVklOMWV3Y0xSZmpLYlRxeFRTWGx3CitaTGd4ajl4OWM1dVl4TlV2Nk1X
+            Vi9xZ054Z0F6ZGVJTEhkYzNqQjlJN1UKLS0tIGtXTlk4NVlkZ0tTejZXR0hza29G
+            UHQ4enVrd3JWdzZsZEU2MEwyVzcwVUUKEa12jT/VjdP9VtrRaqpTDqFb4mZapLC8
+            ostXvSOfAzP0+bDefK/2W87jSx6j/QLpci7bZ038E83wm//ZQSdbAg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-20T00:06:14Z"
-    mac: ENC[AES256_GCM,data:UzZGPYCYfeC+ITNrZRzu8zAp0zOFyA/gGqP6KPaMU8Nznmh1EUC/OaYA/yILXLMGYQ4WbutvWHnkG0t5spt+ybc+sHAQsMqKQhSD73TobIvN+XdeN5XNdAilQwufq/GJDnWQNV2IF/tVoI/mVOCpYuhBUt5HsPWnxNBQqq8U+SQ=,iv:n4h5vBv2w8yg+q0fuOIjLDvelxTFpyC9+89DGmqJ5ug=,tag:UmhjZXXS/9X2Fx/tz2DayA==,type:str]
+    lastmodified: "2023-02-20T18:58:54Z"
+    mac: ENC[AES256_GCM,data:uVKoFZ8gKqWkV3n67Ggtx2S35c11HdyGAp+Gd2pkFi5knS4IZE5twpgqCS+3HoyQ45V9zejQjbyCcO+eMVq96T9VtscLWgXAMtVN7TLTY9qI76+uWVGKKGDNMy9bjr7vFQx4ySSsk8UYr3W2FQzzaWyGNMhXMKVlfFylJ32MsgE=,iv:vICjFYB4v9cAJ17INbdgbZhzXwfzhqurmSqf2rT0OCw=,tag:t4j7+u1HpdYKo86lOkWYIA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
